--- a/content/publication/conference-paper/cite.bib
+++ b/content/publication/conference-paper/cite.bib
@@ -1,8 +1,16 @@
-@inproceedings{example1,
-  title={An example conference paper},
-  author={Bighetti, Nelson and Ford, Robert},
-  booktitle={Source Themes Conference},
-  pages={1--6},
-  year={2013},
-  organization={IEEE}
+@inproceedings{chiapponi_badpass_2022,
+	series = {Lecture {Notes} in {Computer} {Science}},
+	title = {{BADPASS}: {Bots} {Taking} {ADvantage} of {Proxy} as a {Service}},
+	isbn = {978-3-031-21280-2},
+	shorttitle = {{BADPASS}},
+	doi = {10.1007/978-3-031-21280-2_18},
+	language = {en},
+	booktitle = {Information {Security} {Practice} and {Experience 2022}},
+	publisher = {Springer International Publishing},
+	author = {Chiapponi, Elisa and Dacier, Marc and Thonnard, Olivier and Fangar, Mohamed and Rigal, Vincent},
+	editor = {Su, Chunhua and Gritzalis, Dimitris and Piuri, Vincenzo},
+	year = {2022},
+	pages = {327--344},
 }
+
+
